# subtitle-to-speech

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  subtitle-to-speech.py  utils.py
_sample_files/: example.srt  example_short.srt
