[project]
name = "subtitle-to-speech"
version = "1.0.0"
description = 'Convert SRT and SBV subtitle files to spoken audio to enhance accessibility of video in sign language.'
readme = "README.md"
requires-python = ">=3.10,<=3.12"
license = "MIT"

authors = [
  { name = "Statistisches Amt, Kanton Zürich, Team Data", email = "datashop@statistik.zh.ch" },
  { name = "Chantal Amrhein" },
  { name = "Patrick Arnecke" },
]
dependencies = [
    "openai>=2.29.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.2.1",
    "srt>=3.5.3",
    "streamlit>=1.55.0",
]

